# solid_principles_cpp

./: .clang-format  CMakeLists.txt  LICENSE  README.md  conanfile.txt  main.cpp
Principles/DIP/Car/: Car.cpp  Car.h  Engine.cpp
Principles/DIP/Logger/: ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h
Principles/DIP/Reporting/: Reporting.cpp  Reporting.h
Principles/ISP/: Document.cpp  Fax.cpp  Machine.cpp  Printer.cpp  Scanner.cpp
Principles/OCP/: Filter.cpp  Specification.cpp
Principles/SRP/: Journal.cpp
cmake/: CompilerOptions.cmake
include/DependencyInversion/CarReport/: CarMaker.h  Engine.h
include/DependencyInversion/CarReport/Logger/: ConsoleLogger.h  ILogger.h
include/DependencyInversion/CarReport/Reporting/: LogReporter.h
include/DependencyInversion/RelationshipReport/: RelationshipsMaker.h
include/InterfaceSegregation/: Document.h
include/InterfaceSegregation/MultifunctionPrinter/: Fax.h  IFax.h  IMachine.h  IPrinter.h  IScanner.h  Machine.h  Printer.h  Scanner.h
include/LiskovSubstitution/: Shape.h
include/OpenClosed/: Filter.h  IFilter.h  Product.h  ProductFilter.h  Specification.h
include/SingleResponsibility/: Journal.h  PersistenceManager.hpp
src/: main.cpp
src/DependencyInversion/CarReport/: CarMaker.cpp  Engine.cpp
src/DependencyInversion/CarReport/Logger/: ConsoleLogger.cpp
src/DependencyInversion/CarReport/Reporting/: LogReporter.cpp
src/InterfaceSegregation/: Machine.cpp
src/LiskovSubstitution/: Shape.cpp
src/OpenClosed/: Filter.cpp  ProductFilter.cpp  Specification.cpp
src/SingleResponsibility/: Journal.cpp
test/: CMakeLists.txt  main.test.cpp
test/DependencyInversion/CarReport/: CarMaker.test.cpp
test/DependencyInversion/RelationshipReport/: RelationshipsMaker.test.cpp
test/InterfaceSegregation/: Machine.test.cpp  MultifunctionPrinterMachine.test.cpp
test/LiskovSubstitution/: Shape.test.cpp
test/OpenClosed/: Filter.test.cpp
test/SingleResponsibility/: Journal.test.cpp
